adding new words

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,6 @@ data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" ari
 </nav>
 
 <div class="container">
-    {% block page_content %}{% endblock %}
+    {% block page_content %}{% endblock %}{% hello%}
 </div>
 
